k8s-security/02-node-hostport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-hostport
spec:
  containers:
  - image: k8schandra/node:v1
    name: node
    ports:
    - containerPort: 8080
      hostPort: 9000
      protocol: TCP
