k8s-security/05-1-pod-run-as-non-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-run-as-non-root-chandra
spec:
  containers:
  - name: main
    image: k8schandra/ubuntu-with-user:chandra
    command: ["/bin/sleep", "999999"]
    imagePullPolicy: Always
    securityContext:
      runAsNonRoot: true
