k8s-security/07-pod-add-settime-capability.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-add-settime-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        add:
        - SYS_TIME
    volumeMounts:
     - name: tz-india
       mountPath: /etc/localtime
  volumes:
    - name: tz-india
      hostPath:
        path: /usr/share/zoneinfo/Asia/Kolkata
