k8s-security/network-policy-default-deny.yaml
apiVersion: policy/beta1v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
