k8s-security/network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-net-policy
spec:
  podSelector:
    matchLabels:
      app: datebase
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: webserver
    ports:
    - port: 8080
